[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leetcode-pygame"
version = "0.0.1"
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = ["Pygame", "Leetcode"]
authors = [
  { name = "Serdar Kuzucu", email = "serdar.kuzucu@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pygame",
]

[project.urls]
Documentation = "https://github.com/sedran/leetcode-pygame#readme"
Issues = "https://github.com/sedran/leetcode-pygame/issues"
Source = "https://github.com/sedran/leetcode-pygame"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
  "pytest>=1.0.0",
  "pytest-cov>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/leetcode_pygame tests}"

[tool.coverage.run]
source_pkgs = ["leetcode_pygame", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
leetcode_pygame = ["src/leetcode_pygame", "*/leetcode_pygame/src/leetcode_pygame"]
tests = ["tests", "*/leetcode/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
